--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=sonarqubecheck
-sonar.projectName=sonarproject
+sonar.projectKey=my-sonar-project
+sonar.projectName=My Sonar Sample Project
 sonar.sources=src
 sonar.java.binaries=.
 sonar.host.url=http://146.190.188.227:9000/
