--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectName=vishsonarproject
 sonar.sources=src
 sonar.java.binaries=.
 sonar.host.url=http://159.203.53.52:9000/
+sonar.token=sqp_90b9e35cbe4f0ddbe7647a6b8a94fe1a764d4972
